# ca2lib

./: .gitignore  LICENSE  README.md
ca2lib/: CMakeLists.txt  package.xml
ca2lib/include/ca2lib/: env.h  geometry.h  parse_command_line.h  plane_extractor.h  projection.h  targets.h  types.h
ca2lib/include/ca2lib/gui/: ca2lib_application.h  image_frame.h  ros_image_view.h
ca2lib/include/ca2lib/io/: ros.h
ca2lib/include/ca2lib/plane_extractor/: plane_extractor_base.h  plane_extractor_lidar.h  plane_extractor_monocular.h
ca2lib/include/ca2lib/solver/: solver.h
ca2lib/include/ca2lib/targets/: target_base.h  target_charuco.h  target_checkerboard.h
ca2lib/scripts/: visualize_planes.py
ca2lib/src/: env.cpp  parse_command_line.cpp  projection.cpp  types.cpp
ca2lib/src/gui/: ca2lib_application.cpp  image_frame.cpp  ros_image_view.cpp
ca2lib/src/io/: ros.cpp
ca2lib/src/plane_extractor/: plane_extractor_lidar.cpp  plane_extractor_monocular.cpp
ca2lib/src/solver/: solver.cpp
ca2lib/src/targets/: target_base.cpp  target_charuco.cpp  target_checkerboard.cpp
ca2lib/tests/: test_extractor.cpp  test_geometry.cpp  test_solver.cpp  test_target.cpp
docker/: Dockerfile  build.sh  run.sh
docker_devel/: Dockerfile  run_debug.sh
